# telegram-wp-backup

./: .env.example  .gitignore  CLAUDE.md  README.md  TECH.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 02f2fc4ed689_initial.py
bot/: __main__.py
bot/core/: config.py  database.py
bot/filters/: __init__.py
bot/handlers/: backups.py  cache.py  disk.py  restore.py  schedules.py  start.py  users.py
bot/keyboards/: __init__.py
bot/middlewares/: __init__.py
bot/models/: backup.py  schedule.py  user.py
bot/repositories/: backup_repo.py  schedule_repo.py  user_repo.py
bot/services/: backup_service.py  cache_service.py  disk_service.py  notification_service.py  restore_service.py  scheduler_service.py
tasks/: phase-1-core.md  phase-2-backups.md  phase-3-schedule.md  phase-4-restore.md  phase-5-users.md
